--- a/.env
+++ b/.env
@@ -6,3 +6,8 @@
 
 DATABASE_URL="mysql://root:mysql@localhost:3306/nextapp"
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dl83bpmyz"
+
+NEXTAUTH_URL = http://localhost:3000
+NEXTAUTH_SECRET = jfkenfenfkwnkfnwejnojcoiwejf
+GOOGLE_CLIENT_ID = 813962306030-uegqua6vr0fk6smmp0sv5vbpu5852ju6.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
