--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "next": "13.5.2",
+    "next-auth": "^4.23.1",
     "next-cloudinary": "^4.22.0",
     "postcss": "8.4.30",
     "prisma": "^5.3.1",
